finished writing RSpec #13

--- a/app/assets/stylesheets/article_question.scss
+++ b/app/assets/stylesheets/article_question.scss
@@ -86,6 +86,10 @@
     .space, .checkbox {
       margin-right: 10px;
     }
+    .have_solved {
+      margin-left: 20vw;
+      margin-right: 20vw;
+    }
   }
 }
 
