--- a/app/assets/stylesheets/user.scss
+++ b/app/assets/stylesheets/user.scss
@@ -1,45 +1,78 @@
 /* ユーザーモデル関連のページ */
 /* profile_avatarの大きさは、表示するアバターのサイズを上回るようにする */
-.user_profile {
-  width: 80vw;
-  height: 500px;
-  margin: 0 auto 10%;
-  background-color: lightgray;
-  .page_name {
-    height: 30px;
-    font-size: 23px;
-    margin-bottom: 20px;
-  }
-  .user_identification {
-    display: flex;
-    height: 70px;
-    margin-bottom: 30px;
-    .profile_avatar {
-      margin-right: 15px;
+.user_info { 
+  display: flex;
+  .user_profile {
+    width: calc(100vw - 20px - 130px - 20px - 20px);
+    height: 500px;
+    margin-left: 20px;
+    background-color: rgba($color: #15925e, $alpha: 0.7);
+    .page_name {
+      height: 30px;
+      font-size: 23px;
+      margin-bottom: 20px;
+      color: whitesmoke;
     }
-    .user_name {
-      font-size: 30px;
-      width: calc(80vw - 60px - 15px);
-      overflow: auto;
+    .user_identification {
+      display: flex;
+      height: 70px;
+      margin-bottom: 30px;
+      .profile_avatar {
+        margin-right: 15px;
+      }
+      .user_name {
+        font-size: 30px;
+        width: calc(100% - 60px - 15px);
+        overflow: auto;
+        color: whitesmoke;
+      }
+    }
+    .profile_text {
+      width: 85%;
+      height: 250px;
+      background-color: white;
+      overflow-wrap: break-word;
+      overflow-y: auto;
+      margin: 0 auto 10px;
+    }
+    hr {
+      border: none;
+      height: 2px;
+      background: linear-gradient(90deg, rgba(0, 0, 0, 0.1) 0%,
+                rgb(0, 0, 0) 50%, rgba(0, 0, 0, 0.1) 100%);
+    }
+    .follow_form {
+      height: 50px;
+      width: 5rem;
+      background: whitesmoke;
     }
   }
-  .profile_text {
-    width: 70vw;
-    height: 250px;
-    background-color: white;
-    overflow-wrap: break-word;
-    overflow-y: auto;
-    margin: 0 auto 10px;
-  }
-  hr {
-    border: none;
-    height: 2px;
-    background: linear-gradient(90deg, rgba(0, 0, 0, 0.1) 0%,
-              rgb(0, 0, 0) 50%, rgba(0, 0, 0, 0.1) 100%);
-  }
-  .article_link {
-    width: 70vw;
-    height: 30px;
-    margin: 15px auto;
+  .user_link {
+    height: 500px;
+    width: 130px;
+    margin-left: 20px;
+    margin-right: 20px;
+    background-color: rgba($color: #6a9c1a, $alpha: 0.8);
+    .profile_item {
+      margin-top: 10px;
+      margin-bottom: 10px;
+      a {
+        color: whitesmoke;
+      }
+    }
+    .two_blocks {
+      height: 3rem;
+      border: 1px solid white;
+      border-radius: 0.5rem;
+      width: 90%;
+      margin: 10px auto;
+      .user_follow {
+        height: 1.5rem;
+        line-height: 1.5rem;
+        a {
+          color: whitesmoke;
+        }
+      }
+    }
   }
 }
