--- a/app/assets/stylesheets/user.scss
+++ b/app/assets/stylesheets/user.scss
@@ -76,3 +76,41 @@
     }
   }
 }
+
+/* フォロー・フォロワーのページ。該当する人の画像・自己紹介・名前を表示 */
+
+.follow_follower_display {
+  width: 80vw;
+  height: 120px;
+  margin: 10px auto;
+  border: 1px solid;
+  border-radius: 10px;
+  background-color: rgba($color: #0dabd393, $alpha: 0.8 );
+  .top_part {
+    display: flex;
+    width: 90%;
+    height: 60px;
+    .one_avatar {
+      height: 100%;
+      width: 55px;
+      margin-right: 15px;
+    }
+    .one_text {
+      height: 60px;
+      width: calc(80vw * 0.9 - 55px - 10px);
+      line-height: 60px;
+      font-size: 1.4rem;
+      overflow: hidden;
+      color: white;
+    }
+  }
+  .one_selfintrodution {
+    height: calc(100% - 60px - 10px);
+    width: 90%;
+    margin: 5px auto;
+    overflow: hidden;
+    overflow-wrap: break-word;
+    color: white;
+  }
+}
+
