--- a/app/views/users/follower.html.erb
+++ b/app/views/users/follower.html.erb
@@ -1,1 +1,27 @@
+<% provide(:title, "follow")%>
 <h1><%= @user.name %>さんのフォロワー</h1>
+
+<% if @user.followers.any? %>
+  <% @followers.each do |follower| %>
+    <div class="follow_follower_display">
+      <div class="top_part">
+        <div class="one_avatar">
+          <% if follower.avatar? %>
+            <div>
+              <%= image_tag follower.avatar.thumb_min.url , class: "avatar" %>
+            </div>
+          <% end %>
+        </div>
+        <div class="one_text">
+          <%= follower.name %>
+        </div>
+      </div>
+      <div class="one_selfintrodution">
+        <%= follower.selfintrodution %>
+      </div>
+    </div>
+  <% end %>
+    <%== pagy_bootstrap_nav(@pagy) %>
+  <% else %>
+    <strong>まだ作成されていません</strong>
+<% end %>
