--- a/app/views/users/follower.html.erb
+++ b/app/views/users/follower.html.erb
@@ -13,7 +13,7 @@
           <% end %>
         </div>
         <div class="one_text">
-          <%= follower.name %>
+          <%= link_to follower.name, user_path(follower) %>
         </div>
       </div>
       <div class="one_selfintrodution">
