--- a/app/views/users/following.html.erb
+++ b/app/views/users/following.html.erb
@@ -14,7 +14,7 @@
           <% end %>
         </div>
         <div class="one_text">
-          <%= follow.name %>
+          <%= link_to follow.name , user_path(follow) %>
         </div>
       </div>
       <div class="one_selfintrodution">
