--- a/app/assets/stylesheets/user.scss
+++ b/app/assets/stylesheets/user.scss
@@ -42,9 +42,8 @@
                 rgb(0, 0, 0) 50%, rgba(0, 0, 0, 0.1) 100%);
     }
     .follow_form {
-      height: 50px;
-      width: 5rem;
-      background: whitesmoke;
+      display: inline-block;
+      margin-left: 20px;
     }
   }
   .user_link {
@@ -101,7 +100,9 @@
       line-height: 60px;
       font-size: 1.4rem;
       overflow: hidden;
-      color: white;
+      a {
+        color: white;
+      }
     }
   }
   .one_selfintrodution {
