--- a/app/views/users/_unfollow.html.erb
+++ b/app/views/users/_unfollow.html.erb
@@ -1,5 +1,5 @@
 <%= form_with(model: current_user.active_relationships.find_by(followed_id: @user.id),
-  html: { method: :delete }, local: true) do |f| %>
+  html: { method: :delete }, local: false) do |f| %>
   <div><%= hidden_field_tag :followed_id, @user.id %></div>
-  <%= f.submit "フォロー解除", class: "" %>
+  <%= f.submit "フォロー解除", class: "unfollow_button" %>
 <% end %>
