--- a/app/assets/stylesheets/commonsetting.scss
+++ b/app/assets/stylesheets/commonsetting.scss
@@ -134,6 +134,7 @@ body.noscroll {
 .avatar {
   border-radius: 50%;
   border: solid 1px black;
+  background-color: white;
 }
 
 .form_postion_avatar {
