--- a/app/assets/stylesheets/user.scss
+++ b/app/assets/stylesheets/user.scss
@@ -33,6 +33,7 @@
       background-color: white;
       overflow-wrap: break-word;
       overflow-y: auto;
+      border-radius: 1rem;
       margin: 0 auto 10px;
     }
     hr {
