change the layout of an article #17

--- a/app/views/articles/browsing.html.erb
+++ b/app/views/articles/browsing.html.erb
@@ -6,34 +6,31 @@
       <%= @article.title %>
     </div>
     <hr>
+    <div class="user_info">
+      <div class="info_content">
+        <div>
+          <% if @article.user.avatar? %>
+            <div class="avatar_img">
+              <%= image_tag @article.user.avatar.thumb_min.url , class: "avatar" %>
+            </div>
+          <% end %>
+        </div>
+        <div class="name">
+          <a href="<%= user_path(@article.user) %>"><%= @article.user.name %></a>
+        </div>
+      </div>
+      <div class="selfintrodution">
+        <%= @article.user.selfintrodution %>
+      </div>
+    </div>
+    <div class="other_info">
+    
+    </div>
     <div class="text">
       <%= @article.articletext %>
     </div>
     <div class="comment">
       コメントーアカウント保持者限定ー
-    </div>
-  </div>
-  <div class="sub_view">
-    <div class="other_functions">
-      
-    </div>
-    <div class="user_info">
-      <div class="name_and_avatar">
-        <% if @article.user.avatar? %>
-          <div class="avatar_img">
-            <%= image_tag @article.user.avatar.thumb_min.url , class: "avatar" %>
-          </div>
-        <% end %>
-        <div class="name">
-          <div class="vertical_center">
-            <a href="<%= user_path(@article.user) %>"><%= @article.user.name %></a>
-          </div>
-        </div>
-      </div>
-      <hr>
-      <div class="selfintrodution">
-        <%= @article.user.selfintrodution %>
-      </div>
     </div>
   </div>
 </div>
