--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -38,8 +38,8 @@
       <li class="header_menu_item"><%= link_to "質問作成", new_question_path %></li>
       <li class="header_menu_item"><%= link_to "通知設定", '#'%></li>  
       <li class="header_menu_item"><a href="#">niceリスト</a></li>
-      <li class="header_menu_item"><a href="#">気になるリスト</a></li>
-      <li class="header_menu_item"><a href="#">お気に入りの人リスト</a></li>
+      <li class="header_menu_item"><a href="#">記事ブックマーク</a></li>
+      <li class="header_menu_item"><a href="#">気になる質問リスト</a></li>
       <li class="header_menu_item"><%= link_to "記事投稿リスト", article_path(current_user) %></li>
       <li class="header_menu_item"><%= link_to "質問投稿リスト", question_path(current_user) %></li>       
     <% end %>
