--- a/app/views/articles/browsing.html.erb
+++ b/app/views/articles/browsing.html.erb
@@ -24,13 +24,18 @@
       </div>
     </div>
     <div class="other_info">
-      <% if current_user != @article.user %>
-        <% if current_user.sum_nice_per_user.include?(@article) %>
-          <%= render 'good' %>
-        <% else %>
-          <%= render 'notgood' %>
+      <div class="nice_button">
+        <% if current_user != @article.user %>
+          <% if current_user.sum_nice_per_user.include?(@article) %>
+            <%= render 'notnice' %>
+          <% else %>
+            <%= render 'nice' %>
+          <% end %>
         <% end %>
-      <% end %>
+        <div id="number_nice">
+          <%= @article.sum_nice_per_article.count %>
+        </div>
+      </div>
     </div>
     <div class="text">
       <%= @article.articletext %>
