--- a/app/views/articles/_nice.html.erb
+++ b/app/views/articles/_nice.html.erb
@@ -1,4 +1,4 @@
 <%= form_with(model: current_user.nice_to_articles.build, local: false) do |f| %>
   <div><%= hidden_field_tag :article_id, @article.id %></div>
-  <%= f.submit "nice", class: "" %>
+  <%= f.submit "nice", class: "not_nice_now" %>
 <% end %>
