you can access your nice articles collection page #17

--- a/app/assets/stylesheets/article_question.scss
+++ b/app/assets/stylesheets/article_question.scss
@@ -185,6 +185,9 @@
             border: 2px solid green;
             border-radius: 14px;
           }
+          .author {
+            color: green;
+          }
         }
         #number_nice {
           text-align: center;
