--- a/app/views/articles/browsing.html.erb
+++ b/app/views/articles/browsing.html.erb
@@ -42,6 +42,24 @@
           <%= @article.sum_nice_per_article.count %>
         </div>
       </div>
+      <div class="items">
+        <div class="bookmark_button">
+          <% if current_user != @article.user %>
+            <% if current_user.sum_bookmark_per_user.include?(@article) %>
+              <%= render 'notbookmark' %>
+            <% else %>
+              <%= render 'bookmark' %>
+            <% end %>
+          <% else %>
+            <div class="author">
+              bookmark計
+            </div>
+          <% end%>
+        </div>
+        <div id="number_bookmark">
+          <%= @article.sum_bookmark_per_article.count %>
+        </div>
+      </div>
     </div>
     <div class="text">
       <%= @article.articletext %>
