--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -38,7 +38,7 @@
       <li class="header_menu_item"><%= link_to "質問作成", new_question_path %></li>
       <li class="header_menu_item"><%= link_to "通知設定", '#'%></li>  
       <li class="header_menu_item"><%= link_to "記事niceリスト", user_nice_path(current_user) %></li>
-      <li class="header_menu_item"><a href="#">記事ブックマーク</a></li>
+      <li class="header_menu_item"><a href="#"><%= link_to "記事ブックマーク", user_bookmark_path(current_user) %></a></li>
       <li class="header_menu_item"><a href="#">気になる質問リスト</a></li>
       <li class="header_menu_item"><%= link_to "記事投稿リスト", article_path(current_user) %></li>
       <li class="header_menu_item"><%= link_to "質問投稿リスト", question_path(current_user) %></li>       
