--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -39,6 +39,7 @@
       <li class="header_menu_item"><%= link_to "通知設定", '#'%></li>  
       <li class="header_menu_item"><%= link_to "記事niceリスト", user_nice_path(current_user) %></li>
       <li class="header_menu_item"><%= link_to "記事ブックマーク", user_bookmark_path(current_user) %></li>
+      <li class="header_menu_item"><%= link_to "質問ブックマーク", user_questionbookmark_path(current_user) %></li>
       <li class="header_menu_item"><%= link_to "気になる質問リスト", user_curious_path(current_user) %></li>
       <li class="header_menu_item"><%= link_to "記事投稿リスト", article_path(current_user) %></li>
       <li class="header_menu_item"><%= link_to "質問投稿リスト", question_path(current_user) %></li>       
