--- a/app/views/questions/browsing.html.erb
+++ b/app/views/questions/browsing.html.erb
@@ -53,6 +53,24 @@
           <%= @question.sum_curious_per_question.count %>
         </div>
       </div>
+      <div class="items">
+        <div class="questionbookmark_button">
+          <% if @question.user != current_user %>
+            <div class="author">
+              ブックマーク計
+            </div>
+          <% else %>
+            <%if current_user.sum_questionbookmark_per_user.include?(@question) %>
+              <%= render 'notbookmark' %>
+            <% else %>
+              <%= render 'bookmark' %>
+            <% end%>
+          <% end %>
+        </div>
+        <div id="number_questionbookmark">
+          <%= @question.sum_questionbookmark_per_question.count %>
+        </div>
+      </div>
     </div>
     <div class="text">
       <%= @question.questiontext %>
