--- a/app/assets/stylesheets/article_question.scss
+++ b/app/assets/stylesheets/article_question.scss
@@ -243,10 +243,35 @@
       border: 1px solid rgba(0, 0, 0, 0.3);
       border-radius: 10px;
     }
-    .comment {
-      height: 100px;
-      background-color: gray;
+    .comment_section {
       @include about_border;
+      .mark_for_user {
+        height: 2rem;
+        line-height: 2rem;
+        font-size: 1.2rem;
+        font-weight: 700;
+      }
+      .existing_comment {
+        border-top: solid;
+        .comment_user {
+          display:  flex;
+          width: 90%;
+          margin: 5px auto;
+          .commenter_avatar {
+            width: 55px;
+            height: 55px;
+            margin-right: 10px;
+          }
+          .name {
+            height: 55px;
+            line-height: 55px;
+          }
+        }
+        .comment {
+          width: 90%;
+          margin: 10px auto;
+        }
+      }
     }
   }
 }
