we can make a comment to article #25

--- a/app/assets/stylesheets/article_question.scss
+++ b/app/assets/stylesheets/article_question.scss
@@ -272,6 +272,11 @@
           margin: 10px auto;
         }
       }
+      .new_comment {
+        border-top: solid;
+        padding-top: 50px;
+        padding-bottom: 20px;
+      }
     }
   }
 }
