--- a/app/assets/stylesheets/article_question.scss
+++ b/app/assets/stylesheets/article_question.scss
@@ -271,6 +271,20 @@
           width: 90%;
           margin: 10px auto;
         }
+        .delete {
+          margin-bottom: 10px;
+          margin-left: 10px;
+          width: 3rem;
+          height: 1.5rem;
+          border: 1px solid red;
+          border-radius:  10px;
+          background-color: red;
+          text-align: center;
+          a {
+            display: block;
+            color: white;
+          }
+        }
       }
       .new_comment {
         border-top: solid;
