--- a/app/assets/stylesheets/questions.scss
+++ b/app/assets/stylesheets/questions.scss
@@ -25,3 +25,51 @@
   color: red;
   background: white;
 }
+
+// 質問閲覧ページ
+.answer_comment_section {
+  .mark_of_answer {
+    margin-bottom: 20px;
+  }
+  .existing_answer_comment {
+    margin-bottom: 40px;
+    border: 1px solid;
+    border-radius: 10px;
+    .answer_user {
+      display:  flex;
+      width: 90%;
+      margin: 5px auto;
+      .answer_avatar {
+        width: 55px;
+        height: 55px;
+        margin-right: 10px;
+      }
+      .answer_user_name {
+        height: 55px;
+        line-height: 55px;
+      }
+    }
+    .answer {
+      width: 90%;
+      margin: 10px auto;
+    }
+    .delete {
+      margin-bottom: 10px;
+      margin-left: 10px;
+      width: 3rem;
+      height: 1.5rem;
+      border: 1px solid red;
+      border-radius:  10px;
+      background-color: red;
+      text-align: center;
+      a {
+        display: block;
+        color: white;
+      }
+    }
+  }
+  .new_answer {
+    padding-top: 50px;
+    padding-bottom: 20px;
+  }
+}
